[package]
name = "courier-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
semihosted-debug = ["cortex-m-semihosting"]
debug = ["std"]
std = []
stamps = ["hmac"]

[dependencies]
cortex-m-semihosting = { version = "0.5.0", optional = true }
heapless = "0.7.16"
hmac = { version = "0.12.1", default-features = false, optional = true }
postcard = { version = "1.0", features = ["alloc"] }
sha2 = { version = "0.10.6", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }