[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["multipart"] }
clap = { version = "4.2.4", features = ["derive"] }
color-eyre = "0.6.2"
tokio = { version = "1.27.0", features = ["full"] }
nix = "0.26.2"
